improved documentation of evidence endpoint refractored extend_efo to direct
