# app/static/docs/swagger/swagger.yaml
@@ -7,18 +7,21 @@ info:
   description: |
     Documentation for the REST API served at www.targetvalidation.org.
     More info [here](https://about.targetvalidation.org).
-  license: Apache 2.0
-  contact: support@targetvalidation.org
-  termsOfService: fair usage is enforced with limits to the api calls
+  license:
+    name: Apache 2.0
+  contact:
+    email: support@targetvalidation.org
+  termsOfService: |
+    Fair usage is enforced with limits to the api calls
 tags:
-      - name: public
-        description: Publicly supported stable API
-      - name: private
-        description: Unstable API methods, subject to change at any time without prior notice. Use at your own risk.
-      - name: auth
-        description: Authentication methods
-      - name: utils
-        description: Utility methods
+  - name: public
+    description: Publicly supported stable API
+  - name: private
+    description: Unstable API methods, subject to change at any time without prior notice. Use at your own risk.
+  - name: auth
+    description: Authentication methods
+  - name: utils
+    description: Utility methods
 basePath: /api/latest
 consumes:
   - text/plain; charset=utf-8
@@ -38,7 +41,6 @@ paths:
           description: id of the evidencestring to retrieve
           required: true
           type: string
-          format: string
       responses:
         200:
           description: Successful response
@@ -59,18 +61,16 @@ paths:
       description: |
         Gets `evidencestring` object by id
       parameters:
-        -
-          name: id
+        - name: id
           in: query
           description: id of the evidencestring to retrieve
           required: true
           type: string
-          format: string
       responses:
         200:
           description: Successful response
           schema:
-            title: ArrayOfPersons
+            title: ArrayOfEvidenceStrings
             type: array
             items:
               title: EvidenceString
@@ -86,60 +86,170 @@ paths:
         - public
       description: |
         Gets `evidencestring` objects by applying a range of filters
+      parameters:
+        - name: target
+          in: query
+          description: a target identifier listed as target.id
+          required: false
+          type: string
+        - name: disease
+          in: query
+          description: a EFO code listed as disease.id
+          required: false
+          type: string
+        - name: datasource
+          in: query
+          description: datasource to consider
+          required: false
+          type: string
+        - name: datatype
+          in: query
+          description: datatype to consider
+          required: false
+          type: string
+        - name: pathway
+          in: query
+          description: a pathway identifier (meaning all the targets linked to that pathway)
+          required: false
+          type: string
+        - name: uniprotkw
+          in: query
+          description: a uniprot keyword (meaning all the targets linked to that kw)
+          required: false
+          type: string
+        - name: eco
+          in: query
+          description: a ECO identifier listed in the evidence
+          required: false
+          type: string
+        - name: datastructure
+          in: query
+          description: Type of data structure to return. Can be 'full', 'simple', 'ids', or 'count'.
+          required: false
+          type: string
+        - name: fields
+          in: query
+          description: fields you want to retrieve. this will get priority over the datastructure requested
+          required: false
+          type: string
+        - name: direct
+          in: query
+          description: return only evidence directly associated with the disease efo term if true or all the evidence associaated with its children in the EFO ontology if false
+          required: false
+          type: boolean
+        - name: scorevalue_min
+          in: query
+          description: filter by minimum score value
+          required: false
+          type: number
+          format: float
+        - name: scorevalue_max
+          in: query
+          description: filter by maximum score value
+          required: false
+          type: number
+          format: float
+        - name: size
+          in: query
+          description: maximum amount of results to return. Defaults to 10, max is 1000
+          required: false
+          type: number
+          format: integer
+        - name: from
+          in: query
+          description: How many initial results should be skipped. Defaults to 0
+          required: false
+          type: number
+          format: integer
+        - name: format
+          in: query
+          description: Format to get data back. Can be 'json', 'xml' or 'table'
+          required: false
+          type: string
+      responses:
+        200:
+          description: Successful response
   /public/association:
     get:
       tags:
         - public
       description: |
         Gets `association` object by id
+      responses:
+        200:
+          description: Successful response
   /public/association/filter:
     get:
       tags:
         - public
       description: |
         Gets `association` objects by applying a range of filters
+      responses:
+        200:
+          description: Successful response
   /private/disease:
     get:
       tags:
         - private
       description: |
         Gets `disease` objects
+      responses:
+        200:
+          description: Successful response
   /private/eco:
     get:
       tags:
         - private
       description: |
         Gets `eco` objects
+      responses:
+        200:
+          description: Successful response
   /private/target:
     get:
       tags:
         - private
       description: |
         Gets `target` objects
+      responses:
+        200:
+          description: Successful response
   /private/target/expression:
     get:
       tags:
         - private
       description: |
         Gets `target-expression` objects
+      responses:
+        200:
+          description: Successful response
   /public/search:
     get:
       tags:
         - public
       description: |
         Gets `search-result` objects
+      responses:
+        200:
+          description: Successful response
   /private/quicksearch:
     get:
       tags:
         - private
       description: |
         Gets `search-result` objects
+      responses:
+        200:
+          description: Successful response
   /private/autocomplete:
     get:
       tags:
         - private
       description: |
         Gets `autocomplete` objects
+      responses:
+        200:
+          description: Successful response
   /public/auth/request_token:
     get:
       tags:
@@ -147,6 +257,9 @@ paths:
         - auth
       description: |
         Gets an authentication token in the form of [JWT](https://jwt.io/).
+      responses:
+        200:
+          description: Successful response
   /public/auth/validate_token:
     get:
       tags:
@@ -155,6 +268,9 @@ paths:
         - auth
       description: |
         Succed if token is valid
+      responses:
+        200:
+          description: Successful response
   /public/utils/ping:
     get:
       tags:
@@ -162,6 +278,9 @@ paths:
         - utils
       description: |
         Ping service
+      responses:
+        200:
+          description: Successful response
   /public/utils/version:
     get:
       tags:
@@ -169,3 +288,6 @@ paths:
         - utils
       description: |
         Get current API version
+      responses:
+        200:
+          description: Successful response
